--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/node": "18.13.0",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "jwt-decode": "^3.1.2",
+    "material-ui-phone-number": "^3.0.0",
+    "next": "^13.1.6",
+    "next-auth": "^4.19.2",
     "next-i18next": "^13.1.5",
     "react": "18.2.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
@@ -30,16 +38,5 @@
     "@types/react": "18.0.28",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7"
-  },
-  "presets": [
-    "next/babel"
-  ],
-  "plugins": [
-    [
-      "babel-plugin-styled-components",
-      {
-        "ssr": false
-      }
-    ]
-  ]
+  }
 }
