--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
     "@next/font": "13.1.6",
@@ -18,16 +20,23 @@
     "@types/node": "18.13.0",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
+    "material-icons": "^1.13.1",
     "material-ui-phone-number": "^3.0.0",
     "next": "^13.1.6",
     "next-auth": "^4.19.2",
     "next-i18next": "^13.1.5",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-calendar": "^4.0.0",
     "react-code-input": "^3.10.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
