--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
