--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "google-map-react": "^2.2.0",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "material-ui-phone-number": "^3.0.0",
     "next": "^13.1.6",
