--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "react-calendar": "^4.0.0",
     "react-code-input": "^3.10.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-modern-calendar-datepicker": "^3.1.6",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^4.8.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1",
+    "react-sweetalert2": "^0.5.2",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
